# CodeAtlas

./: README.md
Battery_Voltage_Prediction/: Battery_model_v3.ipynb  ReadMe.md  spacecraft_battery_prediction_research.md
Battery_Voltage_Prediction/Battery_model_v3/: Battery_model_v3.md
Inverted_Pendulum/: KalmanFilter.cpp  KalmanFilter.h  ReadMe.md  WALL_E.cpp
OrbitVizProjectRoot/: Dockerfile  docker-compose.yml  entrypoint.sh  generate_telemetry.py  spacecraft_viz_design_doc.md  spacecraft_viz_readme.md
OrbitVizProjectRoot/OrbitViz/: CMakeLists.txt
OrbitVizProjectRoot/OrbitViz/data/mock/: custom_telemetry.json  mock_attitude_data.json
OrbitVizProjectRoot/OrbitViz/resources/models/: MULTI_PERIOD_UHF_ANALYSIS_REPORT.txt  cubesat.mtl  gen2_spacecraft.mtl  targeting_py.txt  testing_sap_update_tool.txt
OrbitVizProjectRoot/OrbitViz/src/: MainWindow.cpp  MainWindow.h  main.cpp
OrbitVizProjectRoot/OrbitViz/src/attitude/: AttitudeEngine.cpp  AttitudeEngine.h
OrbitVizProjectRoot/OrbitViz/src/visualization/: SpacecraftView.cpp  SpacecraftView.h
OrbitVizProjectRoot/OrbitViz/ui/: mainwindow.ui
Papers/: reaDme.md
Sudoku_Solver/: readme.md  sudoku_solver.py
rw_anomaly_detection/: rw_friction_detection.py  rw_friction_readme.md
rw_anomaly_detection/models/: device_1_feature_bounds.json  device_1_model.pkl  device_2_feature_bounds.json  device_2_model.pkl  device_3_feature_bounds.json  device_3_model.pkl  device_4_feature_bounds.json  device_4_model.pkl  device_models.pkl  scale_factors.json
